--- a/WOTS/GoalsCell.xib
+++ b/WOTS/GoalsCell.xib
@@ -11,15 +11,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="GoalsCell" rowHeight="91" id="KGk-i7-Jjw" customClass="GoalsCell" customModule="WOTS" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="91"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="GoalsCell" rowHeight="133" id="KGk-i7-Jjw" customClass="GoalsCell" customModule="WOTS" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="133"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="90.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="132.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Bzp-AR-xAK">
-                        <rect key="frame" x="10" y="27" width="300" height="36"/>
+                        <rect key="frame" x="10" y="48.5" width="300" height="36"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7S7-1J-cgc" customClass="CircleProgressView" customModule="WOTS" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="36" height="36"/>
@@ -60,18 +60,56 @@
                             </view>
                         </subviews>
                         <constraints>
+                            <constraint firstItem="1GW-8H-R8G" firstAttribute="width" secondItem="7S7-1J-cgc" secondAttribute="width" id="HDD-DB-KUP"/>
                             <constraint firstItem="1GW-8H-R8G" firstAttribute="width" secondItem="sAR-kF-Xjo" secondAttribute="width" id="M11-z0-I7S"/>
                             <constraint firstItem="1GW-8H-R8G" firstAttribute="width" secondItem="lyB-gU-xT6" secondAttribute="width" id="e5G-ff-sO6"/>
                             <constraint firstItem="1GW-8H-R8G" firstAttribute="width" secondItem="cEM-uK-zX8" secondAttribute="width" id="foO-Hl-t7U"/>
                             <constraint firstItem="1GW-8H-R8G" firstAttribute="width" secondItem="pMg-l8-qiS" secondAttribute="width" id="i81-Kr-exX"/>
                             <constraint firstItem="1GW-8H-R8G" firstAttribute="width" secondItem="5Ih-T9-ehv" secondAttribute="width" id="m8n-IV-iEo"/>
-                            <constraint firstItem="1GW-8H-R8G" firstAttribute="width" secondItem="7S7-1J-cgc" secondAttribute="width" id="xPW-hM-QEU"/>
                         </constraints>
+                    </stackView>
+                    <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zt5-eu-Tgj">
+                        <rect key="frame" x="10" y="83" width="144" height="20.5"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="S" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DkR-Df-IAe">
+                                <rect key="frame" x="0.0" y="0.0" width="36" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="M" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rnc-LC-KTh">
+                                <rect key="frame" x="36" y="0.0" width="36" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="T" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cvt-uZ-ro4">
+                                <rect key="frame" x="72" y="0.0" width="36" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="W" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rv3-tY-j7s">
+                                <rect key="frame" x="108" y="0.0" width="36" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                     </stackView>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="DkR-Df-IAe" firstAttribute="centerX" secondItem="7S7-1J-cgc" secondAttribute="centerX" id="1Vx-EX-2qo"/>
+                    <constraint firstItem="1GW-8H-R8G" firstAttribute="centerX" secondItem="rv3-tY-j7s" secondAttribute="centerX" id="678-un-qg1"/>
+                    <constraint firstItem="DkR-Df-IAe" firstAttribute="width" secondItem="7S7-1J-cgc" secondAttribute="width" id="Go5-48-v6y"/>
+                    <constraint firstItem="1GW-8H-R8G" firstAttribute="width" secondItem="rv3-tY-j7s" secondAttribute="width" id="M3B-Hn-Pa3"/>
                     <constraint firstItem="Bzp-AR-xAK" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="a83-sv-xQq"/>
+                    <constraint firstItem="Rnc-LC-KTh" firstAttribute="centerX" secondItem="pMg-l8-qiS" secondAttribute="centerX" id="aLd-AF-AC5"/>
+                    <constraint firstItem="Rnc-LC-KTh" firstAttribute="width" secondItem="pMg-l8-qiS" secondAttribute="width" id="aWI-kX-J3G"/>
                     <constraint firstItem="Bzp-AR-xAK" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="c0D-my-Jhz"/>
+                    <constraint firstItem="Cvt-uZ-ro4" firstAttribute="width" secondItem="cEM-uK-zX8" secondAttribute="width" id="gV3-YR-ag6"/>
+                    <constraint firstItem="Cvt-uZ-ro4" firstAttribute="centerX" secondItem="cEM-uK-zX8" secondAttribute="centerX" id="u5J-3F-Mfe"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
@@ -83,7 +121,7 @@
                 <outlet property="progressSixthCircle" destination="5Ih-T9-ehv" id="OLT-De-d36"/>
                 <outlet property="progressThirdCircle" destination="cEM-uK-zX8" id="aw1-Rh-qUN"/>
             </connections>
-            <point key="canvasLocation" x="34" y="64.5"/>
+            <point key="canvasLocation" x="34" y="85.5"/>
         </tableViewCell>
     </objects>
 </document>
